--- a/HoW_S.html
+++ b/HoW_S.html
@@ -108,6 +108,8 @@ single-ended,
 gain-trim,
 Pre-fade listener (PFL),
 Post-fade listener (AFL)
+Quiet stage, loud stage
+Feedback mitigation
 -->
 
 
