Published slides and video for today 	modified:   S21/323/323S21DN.HTM

--- a/S21/323/323S21DN.HTM
+++ b/S21/323/323S21DN.HTM
@@ -111,17 +111,17 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
 	  "https://dordt.instructure.com/files/196315813/download?download_frd=1"><!-- -->
 	  1/18<!-- --></a><!-- --><br><!-- --><a href=
       "https://dordt.instructure.com/files/196567901/download?download_frd=1"><!-- -->
-      1/20<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
-      1/22<!-- --</a><!-- --></td>
+      1/20<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/196914999/download?download_frd=1"><!-- -->
+      1/22<!-- --></a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=WYyb-oHVH7s">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=e66Hqe8TuXw">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
+	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=CLH4yZT5Rz8">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Review Ch 3, 5, 6, 7<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><b>Ch 8</b> Intro, MOSFET current mirrors.<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Discussed three-"isms", Problem 7.120<!--end comment--></td>  
    </TR><!-- Week of 1/24 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
