Added power amplifier paragraphs to HoW_S, also fixed typos on this page and on Sedra_Smith/8th/S_S_8_ER 	modified:   HOW_S/gain.html 	modified:   errata/Sedra_Smith/8th/S_S_8_ER.HTM

--- a/errata/Sedra_Smith/8th/S_S_8_ER.HTM
+++ b/errata/Sedra_Smith/8th/S_S_8_ER.HTM
@@ -14,7 +14,7 @@
 <P align="center"><A HREF="../../../index.html">
                    Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
-                    (last update 10/28/2020)<br> 
+                    (last update 1/23/2021)<br> 
                                <br>
     <img src="Sedra_Smith_8th_Cover_120x150.jpg" width="120" height="150"
                    alt="Textbook cover thumbnail"><br>
@@ -297,11 +297,14 @@ Page 483, Problem D7.60 Part (a).</b><br>
    
                                            <A NAME="P492"></A><b>
 Page 492, Problem 7.120.</b><br>
-   Add this sentence to the problem statement: <br>&nbsp; &nbsp; 
+   Add the word "amplitude" to the last line of the problem 
+   statement so that it reads, ". . .provide 1-V amplitude 
+   pulses at the drain of <i>Q</i><sub>2</sub>." Then add 
+   this sentence at the end of the problem statement: <br>&nbsp; &nbsp; 
       "Assume the transistors have identical specifications."<br>
    Also see the <a href="#P492_A">additional note on this 
    problem</A>.            &nbsp; &nbsp; &nbsp; &nbsp; <small><i>
-               (Posted 7/23/20)</i></small>            <br><br>
+               (Posted 7/23/20, updated 1/23/2021)</i></small><br><br>
 
                                            <A NAME="P562"></A><b>
 Page 562, Problem 8.4.</b><br>
@@ -675,13 +678,16 @@ Page 363, Problem D6.64.</b><br>
 
                                             <A NAME="P492_A"></A><b>
 Page 492, Problem 7.120.</b><br>
-   The "50-<img src="omega_uc.gif" alt="ohm"> coaxial cable" is 
+   1.)  When the problem refers to an "amplitude" it is referring 
+   to the absolute value of the quantity.<br><br>
+   2.)  The "50-<img src="omega_uc.gif" alt="ohm"> coaxial cable" is 
    just a wire with a shield around it.  Specifically, the 
    resistance from one end of the cable to the other is ZERO.  
    The resistance from the drain of <i>Q</i><sub>1</sub> to 
    the source of <i>Q</i><sub>2</sub> is 0 <img src="omega_uc.gif" 
    alt="ohms">. <br><br>
    
+   <i>Further explanation</i><br>
    However, the cable is long enough so that it takes a noticeable 
    amount of time for a signal to travel through the cable (or wire).  
    Because of this propagation time, the cable works better when 
@@ -694,9 +700,17 @@ Page 492, Problem 7.120.</b><br>
    of <i>Q</i><sub>2</sub>, be 50 &Omega; so that the cable works as well as possible with 
    respect to transferring high-bandwidth (fast) signals.<br><br>
    
+   Videos related to this topic:<br>
+   1.) <a href="https://www.youtube.com/watch/ozeYaikI11g"
+   >Transmission Lines&mdash;Signal Transmission and Reflection</a><br>
+   2.) <a href="https://www.youtube.com/watch?v=I9m2w4DgeVk"
+   >Tektronix&mdash;Transmission Lines</a><br>
+   3.) <a href="https://www.youtube.com/watch?v=g_jxh0Qe_FY"
+   >Transmission Line Terminations for Digital and RF signals</a><br><br>
+   
    Also see <a href="#P492">errata on problem 7.120.</a>
    <small><i> &nbsp; &nbsp; &nbsp; &nbsp; 
-   (Posted 7/23/2020)                          </i></small><br><br>   
+   (Posted 7/23/2020, updated 1/23/2021)       </i></small><br><br>   
 
                                             <A NAME="G18_A"></A><b>
 Appendix G, page G-18, Problem G.9</b><br>
