--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 1/25/2021 8:30 am)
+                              >(Last update: 1/25/2021 5:00 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -89,9 +89,9 @@ PS                                                           <BR>
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
         1/25
    <!-- Due -->             </TD><TD align="center" valign="top">
-        1/29<!--<a href=
-		"https://dordt.instructure.com/courses/3110075/assignments/31004379"
-		>1/22</a>
+        <a href=
+		"https://dordt.instructure.com/courses/3110075/assignments/31323685"
+		>1/29</a>
 
    <!-- Returned -->        </TD><TD align="center" valign="top">
 		&nbsp<!--<a href=
@@ -125,10 +125,10 @@ PS                                                           <BR>
 		>1/22</a>
 
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp<!--<a href=
-        "https://dordt.instructure.com/files/181862610/download?download_frd=1"
-        >8/31</a><br>Sent<br>to<br>your<br>Dordt<br>e-mail<br>on<br>8/31<br>at<br>about<br>10:05<br>PM or<br>later.
-        <br>--><br><br>
+		<a href=
+        "https://dordt.instructure.com/files/197541009/download?download_frd=1"
+        >1/25</a><br>Sent<br>to<br>your<br>Dordt<br>e-mail<br>on<br>8/31<br>at<br>about<br>10:05<br>PM or<br>later.
+        <br><br><br>
         See<br>
         notes<br>
         3 &ndash; 10<br>
