--- a/S21/323/323S21DN.HTM
+++ b/S21/323/323S21DN.HTM
@@ -132,7 +132,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
       1/29<!-- --</a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
-	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=YkXQQCReRdU">V</A><!-- --><br>
+	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=sO4gABJHbtw">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
       <TD align="left" valign="bottom">
