Published errata for problem 8.2, sedra and smith 8th 	modified:   errata/Sedra_Smith/8th/S_S_8_ER.HTM

--- a/errata/Sedra_Smith/8th/S_S_8_ER.HTM
+++ b/errata/Sedra_Smith/8th/S_S_8_ER.HTM
@@ -14,7 +14,7 @@
 <P align="center"><A HREF="../../../index.html">
                    Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
-                    (last update 1/23/2021)<br> 
+                    (last update 1/28/2021)<br> 
                                <br>
     <img src="Sedra_Smith_8th_Cover_120x150.jpg" width="120" height="150"
                    alt="Textbook cover thumbnail"><br>
@@ -305,6 +305,25 @@ Page 492, Problem 7.120.</b><br>
    Also see the <a href="#P492_A">additional note on this 
    problem</A>.            &nbsp; &nbsp; &nbsp; &nbsp; <small><i>
                (Posted 7/23/20, updated 1/23/2021)</i></small><br><br>
+
+                                           <A NAME="P562P8P2"></A><b>
+Page 562, Problem 8.2.</b><br>
+   The wording of this problem is ambiguous.  To get the 
+   textbook's answers ignore the Early effect for transistor
+   <i>Q</i><sub>1</sub> entirely.  Apply the Early effect only 
+   to <i>Q</i><sub>2</sub> and then only when calculating  
+   <i>r<sub>o</sub></i> and &Delta;<i>I<sub>O</sub></i>.  Even
+   then there is one outright error in the given answers.  The 
+   correct minimum output voltage using the above method is 
+   <i>V<sub>O</sub></i> &geq; 0.14 V  (not 0.2 V).<br><br>
+   
+   If the Early effect is taken onto account for both transistors,
+   then the answers are: 68 k&Omega;, 6 &mu;m, 0.125 V, 
+   40 k&Omega;, and +5 &mu;A.<br><br>
+   &nbsp; &nbsp; &nbsp; &nbsp; 
+
+                        &nbsp; &nbsp; &nbsp; &nbsp; 
+   <i><small>(Posted 1/28/2021)</small></i><br><br>
 
                                            <A NAME="P562"></A><b>
 Page 562, Problem 8.4.</b><br>
