--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 1/27/2021 10:15 pm)
+                              >(Last update: 1/28/2021 8:35 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -104,6 +104,9 @@ PS                                                           <BR>
                                                        <BR>&nbsp;
         Do Problems <DO>D8.1, +8.2, D8.4, 8.6, +8.10</DO><BR>&nbsp;
 												  	   <br>&nbsp;
+        Note errata for Problem <a href=
+        "../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P562P8P2"
+		                       >D8.2</a>               <br>&nbsp;
         Note errata for Problem <a href=
         "../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P562"
 		                       >D8.4</a>
