323 published PS#3, solutions for PS#2, also fixed a typo on my CV page

--- a/CV.HTM
+++ b/CV.HTM
@@ -784,7 +784,7 @@
 		"https://dfdeboer.github.io/ddb/IEEE_Career_of_dDB_210129.pdf"
         >The Career of Baby-Boomer De Boer</a>," 
 		<i>A presentation to the IEEE Dordt University Branch</i>, 
-		January0 29, 2019.		
+		January 29, 2019.		
 		</P></DIV>
     </TD>
 </TR>
@@ -817,7 +817,7 @@
         <HR>
         <A HREF = "index.html">Back to De Boer's home page</A><BR><BR>
 
-         <small>(This page last updated on 8/22/2020)</small></DIV>
+         <small>(This page last updated on 1/28/2021)</small></DIV>
     </TD>
 </TR>
 
