--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 1/28/2021 8:35 pm)
+                              >(Last update: 1/30/2021 6:21 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -84,6 +84,33 @@ PS                                                           <BR>
    (In Sedra &amp; Smith unless otherwise noted<sup>1</sup>)</DIV></B>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
+ 3
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        1/30
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        <a href=
+		"https://dordt.instructure.com/courses/3110075/assignments/31323685"
+		>2/05</a>
+
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp;<!--<a href=
+        "https://dordt.instructure.com/files/198043785/download?download_frd=1"
+        >1/30</a>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Cascode amplifiers, folded cascode     <br>&nbsp;
+        Review Ch 8 Sections 8.1 through 8.4           <BR>&nbsp;
+                                                       <BR>&nbsp;
+        Do <DO>8.27, +8.29, +8.50, 8.6, 8.55. 8.70 +8.71</DO><BR>&nbsp;
+												  	   <br>&nbsp;
+        Note errata for Problem <a href=
+        "../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P562P8P2"
+		                       >D8.2</a>               <br>&nbsp;
+        Note errata for Problem <a href=
+        "../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P562"
+		                       >D8.4</a>
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
  2
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
@@ -94,10 +121,9 @@ PS                                                           <BR>
 		>1/29</a>
 
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp<!--<a href=
-        "https://dordt.instructure.com/files/181862610/download?download_frd=1"
-        >8/31</a><br>Sent<br>to<br>your<br>Dordt<br>e-mail<br>on<br>8/31<br>at<br>about<br>10:05<br>PM or<br>later.
-        <br>-->
+		<a href=
+        "https://dordt.instructure.com/files/198043785/download?download_frd=1"
+        >1/30</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Current mirrors, gain cells            <br>&nbsp;
         Review Ch 8 Sections 8.1 through 8.4           <BR>&nbsp;
