Fixed some broken links in the navigation of previous/next courses 	modified:   F16/322F16.HTM 	modified:   S19/323S19.HTM

--- a/S19/323S19.HTM
+++ b/S19/323S19.HTM
@@ -114,14 +114,15 @@ The Canvas@Dordt portal provides everything in this frame and more.
             >request guest access</a> to Canvas@Dordt) --><br><br>
 <a href="../S17/323S17.HTM">
 <img src="../PREVIOUS.GIF" ALT="PREVIOUS" border="0"></a>
-offering of this course <!--  
-<a href="../S21/220S21.HTM"> 
-<img src="../NEXT.GIF" ALT="MEXT" border="0"> --><br>
+offering of this course  
+<a href="../S21/323S21.HTM"> 
+<img src="../NEXT.GIF" ALT="NEXT" border="0"><br>
+
 <a href="../F18/322F18.HTM">
 <img src="../PREVIOUS.GIF" ALT="PREVIOUS" border="0"></a>
-offering of EGR 322  <!--
+offering of EGR 322
 <a href="../F20/322F20.HTM"> 
-<img src="../NEXT.GIF" ALT="NEXT" border="0"> -->
+<img src="../NEXT.GIF" ALT="NEXT" border="0">
                                                      </small></P> 
 
 </td></tr></table>
