Published initial dose of info on How_S about Mics 	new file:   HOW_S/MICS/AKG_c414_xls_cut.png 	new file:   HOW_S/MICS/AKG_c414_xls_cut_tumbnail_labeled.png 	new file:   HOW_S/MICS/mic_types.html 	modified:   HoW_S.html

--- a/HoW_S.html
+++ b/HoW_S.html
@@ -99,6 +99,7 @@ Spectral content,
 
 <a href="HOW_S/fader.html">Fader</a><br>
 <a href="HOW_S/gain.html">Gain Structure</a><br>
+<a href="HOW_S/MICS/mic_types.html">Microphones, types of. . .</a> <font color="Steelblue"><b>&larr;NEW!</b></font><br>
 <!--
 XLR,
 TRS,
