Fixed typos in HoW_Sound, mics, types of 	modified:   HOW_S/MICS/mic_types.html

--- a/HOW_S/MICS/mic_types.html
+++ b/HOW_S/MICS/mic_types.html
@@ -182,15 +182,15 @@ There will be a separate page in this tutorial on the electrical connection betw
 the microphone and the mixer board or wireless transmitter or PA amplifier.  There 
 will also be a separate page on handling and using microphones.<br><br>
 
-<a href="AKG_c414_xls_cut.png"><img src="AKG_c414_xls_cut_tumbnail_labeled.png"></a><br>
+<a href="AKG_c414_xls_cut.png"><img width="589" height="966" src="AKG_c414_xls_cut_tumbnail_labeled.png"></a><br>
 <i>Above:  A view of the inside of a typical studio microphone.
 (AKG model C414 XLS )</i> <br><small>Click on the photo for a higher resolution view.  
-Photo supplied by <a href="http://www.AKG.com">AKG.com</a>, used with permission.</a></small>
+Photo &copy;2018 by <a href="http://www.AKG.com">AKG.com</a>, used with permission.</a></small>
 <!--Permission in e-mail dated 180320--></p><br>
 
 <h1>To be continued. . .</h1><p>
 
-Planed for the future on this page:<br>
+Planned for the future on this page:<br>
 -Three qualities that can be traded off<br> &nbsp; &nbsp; &nbsp;
      1.) Audio fidelity<br> &nbsp; &nbsp; &nbsp;
 	 2.) Degree of directionality<br> &nbsp; &nbsp; &nbsp;
