Posted today's slides, video for EGR 323, also updated PS#3 to correct some typos.

--- a/S21/323/323S21DN.HTM
+++ b/S21/323/323S21DN.HTM
@@ -141,19 +141,19 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment-->Finding <i>R<sub>in</sub></i> and <i>R<sub>O</sub></i> for CG amp, also for CG with source degeneration</i> <!--end comment--></td>  
    </TR><!-- Week of 1/31 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/141686602/download?download_frd=1"><!-- -->
-	  2/01<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/198228567/download?download_frd=1"><!-- -->
+	  2/01<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/141845777/download?download_frd=1"><!-- -->
       2/03<!-- --</a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
       2/05<!-- --</a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
+	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=mZIFOiRQHBI">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Body Effect for CG, CB amps, <i>R<sub>in</sub></i>, R<sub>out</sub></i>, A<sub>vo</sub></i>, of CS, Adv. of Cascode<!--end comment--><br>
       <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 2/07 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
