Posted errata, Sedra Smith 8e, Appendix L, Problem 8.2., added comments in html code for HoW_Sound, ideas to write on

--- a/HoW_S.html
+++ b/HoW_S.html
@@ -111,6 +111,9 @@ Pre-fade listener (PFL),
 Post-fade listener (AFL)
 Quiet stage, loud stage
 Feedback mitigation
+Floor wedge monitor techniques
+Monitor mix techniques 
+Audiophools 
 -->
 
 
