--- a/errata/Sedra_Smith/8th/S_S_8_ER.HTM
+++ b/errata/Sedra_Smith/8th/S_S_8_ER.HTM
@@ -14,7 +14,7 @@
 <P align="center"><A HREF="../../../index.html">
                    Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
-                    (last update 1/28/2021)<br> 
+                    (last update 2/02/2021)<br> 
                                <br>
     <img src="Sedra_Smith_8th_Cover_120x150.jpg" width="120" height="150"
                    alt="Textbook cover thumbnail"><br>
@@ -462,6 +462,20 @@ Appendix L, Page L-6, Answer to Problem 6.63.</b><br>
    emitter current for the case of <i>&beta;</i> = 100 will be a bit low.
    &nbsp; &nbsp; &nbsp; &nbsp; 
    <i><small>(Posted 7/23/2020)</small></i><br><br>
+            
+                                           <A NAME="L8_8P02"></A><b>
+Appendix L, Page L-8, Answer to Problem 8.2.</b><br>
+   The answers given assume that you will ignore the Early effect entirely 
+   for transistor <i>Q</i><sub>1</sub> and apply it to <i>Q</i><sub>2</sub>
+   only when calculating <i>r<sub>o</sub></i> and &Delta;<i>I<sub>O</sub></i>.  
+   Even then thre is one outright error in the given answers.  The correct 
+   minimum output voltage using the method described here is 
+   <i>V<sub>O</sub></i>&nbsp;&geq;&nbsp;0.14&nbsp;V (not 0.2&nbsp;V).<br><br>
+
+   If the Early effect is taken onto account for both transistors,
+   then the answers are: 68 k&Omega;, 6 &mu;m, 0.125 V, 
+   40 k&Omega;, and +5 &mu;A.<br><br>&nbsp; &nbsp; &nbsp; &nbsp; 
+   <i><small>(Posted 2/02/2021)</small></i><br><br>
             
 <!-- needs further investigation         <A NAME="L12_10P89"></A><b>
 Appendix L, Page L-12, Answer to Problem 10.89(b).</b><br>
