Posted slides for 323, video for 323 for today. 	modified:   S21/323/323S21DN.HTM

--- a/S21/323/323S21DN.HTM
+++ b/S21/323/323S21DN.HTM
@@ -143,18 +143,18 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/198228567/download?download_frd=1"><!-- -->
-	  2/01<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/141845777/download?download_frd=1"><!-- -->
-      2/03<!-- --</a><!-- --><br><!-- --<a href=
+	  2/01<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/198466499/download?download_frd=1"><!-- -->
+      2/03<!-- --></a><!-- --><br><!-- -><a href=
       "https://dordt.instructure.com/files/145319441/download?download_frd=1"><!-- -->
       2/05<!-- --</a><!-- --></td>
 	  <TD width="15" align="center" valign=bottom">
 	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=mZIFOiRQHBI">V</A><!-- --><br>
-	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --><br>
+	  <!-- -->&nbsp;<!--  --><a href="https://www.youtube.com/watch?v=eRdbp8spI0c">V</A><!-- --><br>
 	  <!-- -->&nbsp;<!--  -><a href="url.htm">V</A><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Body Effect for CG, CB amps, <i>R<sub>in</sub></i>, R<sub>out</sub></i>, A<sub>vo</sub></i>, of CS, Adv. of Cascode<!--end comment--><br>
-      <!--Wednesday -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Wednesday -->&nbsp;<!--start comment-->Probs. 8.50, 8.70, var. on Cascode, Wilson, Widelar, Darlington, Sziklai<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 2/07 - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --><TR>
       <TD width= "15" align="center" valign="bottom">M<br>W<br>F</td>
