Published errata on Sedra Smith 8 Problem 8.55 	modified:   S21/323/323S21PS.HTM 	modified:   errata/Sedra_Smith/8th/S_S_8_ER.HTM

--- a/errata/Sedra_Smith/8th/S_S_8_ER.HTM
+++ b/errata/Sedra_Smith/8th/S_S_8_ER.HTM
@@ -14,7 +14,7 @@
 <P align="center"><A HREF="../../../index.html">
                    Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
-                    (last update 2/02/2021)<br> 
+                    (last update 2/03/2021)<br> 
                                <br>
     <img src="Sedra_Smith_8th_Cover_120x150.jpg" width="120" height="150"
                    alt="Textbook cover thumbnail"><br>
@@ -744,6 +744,23 @@ Page 492, Problem 7.120.</b><br>
    Also see <a href="#P492">errata on problem 7.120.</a>
    <small><i> &nbsp; &nbsp; &nbsp; &nbsp; 
    (Posted 7/23/2020, updated 1/23/2021)       </i></small><br><br>   
+
+                                          <A NAME="P569_8P55"></A><b>
+Page 569, Problem 8.55.</b><br>
+   The wording of Part (b) of the problem statement in the textbook is a little confusing.  
+   This problem is asking for the transconductance, <i>g<sub>m</sub></i><sub>1</sub>
+   of transistor <i>Q</i><sub>1</sub> only, plus the output resistance of 
+   each of the transistors, <i>r<sub>o1</sub></i>, <i>r<sub>o2</sub></i>, and 
+   <i>r<sub>o3</sub></i>.
+   
+   Equivalent and less ambiguous language is as follows:<br><br>&nbsp; &nbsp; 
+      b.) For transistor <i>Q</i><sub>1</sub> find the transconductance, 
+	  <i>g<sub>m</sub></i><sub>1</sub>.  &nbsp;For all three of <br> &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
+	  the transistors,	  find the associated output resistance due to Early <br> &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;
+	  effect, 
+	  <i>r<sub>o1</sub></i>, <i>r<sub>o2</sub></i>, and <i>r<sub>o3</sub></i>
+	  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+      <small><i>(Posted 2/03/2021)           </i></small><br><br>
 
                                             <A NAME="G18_A"></A><b>
 Appendix G, page G-18, Problem G.9</b><br>
