--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/01/2021 7:54 pm)
+                              >(Last update: 2/03/2021 10:21 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -101,7 +101,12 @@ PS                                                           <BR>
         Topics: Cascode amplifiers, folded cascode     <br>&nbsp;
         Review Ch 8 Sections 8.1 through 8.4           <BR>&nbsp;
                                                        <BR>&nbsp;
-        Do <DO>8.27, +8.29, +8.50, 8.55. 8.70 +8.71</DO>
+        Do <DO>8.27, +8.29, +8.50, 8.55. 8.70 +8.71</DO><br>&nbsp;
+		                                               <br>&nbsp;
+        Note clarification for Problem <a href=
+        "../../errata/Sedra_Smith/8th/S_S_8_ER.HTM#P569_8P55"
+		                       >D8.55</a>
+
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  2
