--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/03/2021 10:21 pm)
+                              >(Last update: 2/06/2021 11:47 am)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -82,6 +82,28 @@ PS                                                           <BR>
                       </TD><TD align="center" valign="bottom"><B>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Sedra &amp; Smith unless otherwise noted<sup>1</sup>)</DIV></B>
+<!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 4
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        2/06
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        2/12<!--<a href=
+		"https://dordt.instructure.com/courses/3110075/assignments/3139xxxxx"
+		>2/12</a>
+
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+		&nbsp;<!--<a href=
+        "https://dordt.instructure.com/files/198043785/download?download_frd=1"
+        >1/30</a>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Cascode, Wilson, Widlar current mirrors<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+		        Introduction to Differential Amplifiers<br>&nbsp;
+        Read: &nbsp;Ch 8 Sections 8.5 through 8.7      <BR>&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+		            Ch 9 Section 9.1                   <br>&nbsp;
+                                                       <BR>&nbsp;
+        Do <DO>8.82, +8.84, D8.92, +9.1, 9.3, +D9.13</DO>
 <!-- - - - - - - - - - - - - - - - - - - - - -  --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  3
