Published solutions to 323 PS#3 and turn-in link for PS#4 	modified:   S21/323/323S21PS.HTM

--- a/S21/323/323S21PS.HTM
+++ b/S21/323/323S21PS.HTM
@@ -53,7 +53,7 @@ A:hover {
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                              >(Last update: 2/06/2021 11:47 am)
+                              >(Last update: 2/06/2021 11:42 pm)
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
                                                 </DIV></TD></TR>
 </TABLE>
@@ -89,8 +89,8 @@ PS                                                           <BR>
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
         2/06
    <!-- Due -->             </TD><TD align="center" valign="top">
-        2/12<!--<a href=
-		"https://dordt.instructure.com/courses/3110075/assignments/3139xxxxx"
+        <a href=
+		"https://dordt.instructure.com/courses/3110075/assignments/31437574"
 		>2/12</a>
 
    <!-- Returned -->        </TD><TD align="center" valign="top">
@@ -116,9 +116,9 @@ PS                                                           <BR>
 		>2/05</a>
 
    <!-- Returned -->        </TD><TD align="center" valign="top">
-		&nbsp;<!--<a href=
-        "https://dordt.instructure.com/files/198043785/download?download_frd=1"
-        >1/30</a>
+		<a href=
+        "https://dordt.instructure.com/files/198751323/download?download_frd=1"
+        >2/06</a>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Cascode amplifiers, folded cascode     <br>&nbsp;
         Review Ch 8 Sections 8.1 through 8.4           <BR>&nbsp;
